[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghelper"
version = "0.1.0"
description = "Headless GitHub Actions CI auto-rerunner"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["github", "actions", "ci", "rerun", "automation"]
dependencies = [
    "PyGithub>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "aiohttp>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ghelper = "ghelper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ghelper"]

[tool.hatch.build.targets.wheel.force-include]
"src/ghelper/web/pages/index.html" = "ghelper/web/pages/index.html"
"src/ghelper/web/pages/auth.html" = "ghelper/web/pages/auth.html"
"src/ghelper/web/pages/add-targets.html" = "ghelper/web/pages/add-targets.html"
"src/ghelper/web/static/common.css" = "ghelper/web/static/common.css"
"src/ghelper/web/static/common.js" = "ghelper/web/static/common.js"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
